--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,8 @@ a {
 }
 a.btn,
 button.btn,
-sumit.btn {
+submit.btn,
+input[type="submit"].btn {
     outline: none;
     display: inline-block;
     background-color: #999999;
@@ -94,13 +95,15 @@ sumit.btn {
 }
 a.btn_big,
 button.btn_big,
-sumit.btn_big {
+submit.btn_big,
+input[type="submit"].btn_big {
     padding: 14px 17px;
     height: 46px;
 }
 a.btn_blue,
 button.btn_blue,
-submit.btn_blue {
+submit.btn_blue,
+input[type="submit"].btn_blue {
     color: #0b5f6a;
     border-color: #0b5f6a;
     background-color: transparent;
@@ -112,39 +115,45 @@ submit.btn_blue:hover {
     background-color: #0b5f6a;
 }
 a.btn_white,
-button.btn_blue:hover,
-submit.btn_blue:hover {
+button.btn_white,
+submit.btn_white,
+input[type="submit"].btn_white {
     color: #ffffff;
     border-color: #ffffff;
     background-color: transparent;
 }
 a.btn_white:hover,
 button.btn_white:hover,
-submit.btn_white:hover {
+submit.btn_white:hover,
+input[type="submit"].btn_white:hover {
     color: #0b5f6a;
     background-color: #ffffff;
 }
 a.btn_brown,
 button.btn_brown,
-submit.btn_brown {
+submit.btn_brown,
+input[type="submit"].btn_brown {
     border-color: #ffffff;
     background-color: #bd9707;
 }
 a.btn_brown:hover,
 button.btn_brown:hover,
-submit.btn_brown:hover {
+submit.btn_brown:hover,
+input[type="submit"].btn_brown:hover {
     color: #bd9707;
     background-color: #ffffff;
 }
 a.btn_green,
 button.btn_green,
-submit.btn_green {
+submit.btn_green,
+input[type="submit"].btn_green {
     border-color: #0b5f6a;
     background-color: #0b5f6a;
 }
 a.btn_green:hover,
 button.btn_green:hover,
-submit.btn_green:hover {
+submit.btn_green:hover,
+input[type="submit"].btn_green:hover {
     color: #0b5f6a;
     background-color: #ffffff;
 }
@@ -276,6 +285,7 @@ label span.required {
 .field {
     display: block;
     margin: 20px 0;
+    position: relative;
 }
 .row-8 {
     margin-left: -8px;
@@ -451,6 +461,12 @@ label span.required {
 }
 .flex_lg_grid_3_12 {
     width: 75%;
+}
+.flex_xs_grid_65 {
+    width: 65.5%;
+}
+.flex_xs_grid_35 {
+    width: 34.5%;
 }
 .form-group input[type=password], 
 .form-group input[type=email], 
@@ -743,7 +759,7 @@ header.main_header {
     border-radius: 50px;
     margin: 4px;
 }
- .active, .dot:hover {
+ .slider_bullet_bar .active, .dot:hover {
     background: rgba(1,173,211,0);
     border-width: 2px;
     border-style: solid;
@@ -973,4 +989,93 @@ footer.main_footer {
 .contact_us_page .flex_xs_grid_1_12 {
     width: 100%;
     padding: 0 10px;
+}
+.key_stages_1_and_2 p {
+    color: #383d3a;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+}
+.key_stages_1_and_2 h5 {
+    font-size: 22px;
+    line-height: 1em;
+    color: #0b5f6a;
+}
+.key_stages_1_and_2 .subject_card {
+    padding: 30px 0;
+    border-bottom: 1px dashed #656565;
+}
+.key_stages_1_and_2 .subject_card:first-child {
+    border-top: 1px dashed #656565;
+}
+hr.divider {
+    border-top: none;
+    border-bottom: 1px dashed #656565;
+    margin: 28px 0;
+}
+.key_stages_1_and_2 img {
+    margin: 30px 0 40px 0;
+}
+aside.sidebar_category_wrapper {
+    overflow: hidden;
+    margin-top: 74px;
+}
+.sidebar_search input[type="submit"].btn_big {
+    margin: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.sidebar_search .form-group input[type=search],
+.sidebar_search .form-group input[type=text] {
+    height: 46px;
+    padding-right: 95px;
+    background-color: #ffffff;
+}
+.sidebar_category_container {
+    background-color: #f1f1f1;
+    padding: 35px;
+    max-width: 310px;
+    display: inline-block;
+    float: right;
+}
+.sidebar_list_of_category h4 {
+    font-size: 21px;
+    color: #838688;
+    border-bottom: 1px dashed #999;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+.sidebar_search .field {
+    margin-top: 5px;
+}
+.sidebar_list_of_category ul {
+
+}
+.sidebar_list_of_category ul li {
+    font-size: 16px;
+}
+.sidebar_list_of_category ul li a {
+    color: #8e8e8e;
+    position: relative;
+    padding: 3px;
+    padding-left: 17px;
+    display: block;
+}
+.sidebar_list_of_category ul li a:hover,
+.sidebar_list_of_category ul li a.active {
+    color: #bd9707;
+}
+.sidebar_list_of_category ul li a:before {
+    position: absolute;
+    display: block;
+    content: "";
+    background: url(../images/sidebar_arrow.png);
+    background-repeat: no-repeat;
+    font-size: 14px;
+    width: 5px;
+    height: 8px;
+    background-size: 5px;
+    top: 10px;
+    left: 0;
 }
